# scene_text_ocr

./: CMakeLists.txt  LICENSE  README.md  main.cpp  openMP_sceneTextOCR.cpp  sceneTextOCR.cpp
test/: v1_main.cpp  v2_main.cpp  v2_main.cpp~  v3_main.cpp  v4_main.cpp  v5_main.cpp
